--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	        });
 		}
 
-		// Allows switch between still and animated gifs
+		// Allows switch between still and animated gifs however I can't get it to toggle between still and animated images.
 		$(".carDiv").on("click", function() {
 
 			var state = $(this).attr("data-StillURL");
@@ -169,10 +169,6 @@
 				$(this).attr("data-StillURL", "still");
 			}
 		});
-
-
-
-
 
 	</script>
 
